Change the icons for dark/light theme, change the goals in index.html,  change some things in "Тренировки"

--- a/training.html
+++ b/training.html
@@ -25,10 +25,10 @@
       <li><strong>Понеделник:</strong> Футбол + Крака (фитнес)</li>
       <li><strong>Вторник:</strong> Активно възстановяване (йога, мобилност)</li>
       <li><strong>Сряда:</strong> Футбол + Горна част (фитнес)</li>
-      <li><strong>Четвъртък:</strong> Лека аеробика или почивка</li>
+      <li><strong>Четвъртък:</strong> Активна почивка + масажор/foam rolling</li>
       <li><strong>Петък:</strong> Футбол + Цяло тяло (фитнес)</li>
       <li><strong>Събота:</strong> Мач</li>
-      <li><strong>Неделя:</strong> Почивка</li>
+      <li><strong>Неделя:</strong> Пълна почивка</li>
     </ul>
   </main>
 
