Updated the UI, Make the dark/light theme button everywhere

--- a/stats.html
+++ b/stats.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Статистика</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
+    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
     <h1>Футболна статистика</h1>
     <nav>
       <ul>
