--- a/goals.html
+++ b/goals.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Цели</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
+    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
     <h1>Моите цели</h1>
     <nav>
       <ul>
