Not fully finished the css, made correction in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
-    <h1>⚽ Здравей, аз съм [Твоето име]</h1>
+    <h1>⚽ Добре дошли в моят сайт!</h1>
     <nav>
       <ul>
         <li><a href="index.html">Начало</a></li>
@@ -24,7 +24,7 @@
   <main>
     <section>
       <h2>За мен</h2>
-      <p>Казвам се [Твоето име], на [възраст] години съм и играя като [позиция] в отбора [Име на отбора].</p>
+      <p>Казвам се Кристиян, на 15 години съм и играя като централен халф в.</p>
       <p>Освен футбола, се уча да стана програмист и този сайт е част от моето развитие!</p>
     </section>
 
