--- a/stats.html
+++ b/stats.html
@@ -23,31 +23,7 @@
 
   <main>
     <h2>Статистика за сезона</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Мач</th>
-          <th>Голове</th>
-          <th>Асистенции</th>
-          <th>Минути</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>vs Отбор А</td>
-          <td>1</td>
-          <td>0</td>
-          <td>80</td>
-        </tr>
-        <tr>
-          <td>vs Отбор Б</td>
-          <td>2</td>
-          <td>1</td>
-          <td>90</td>
-        </tr>
-        <!-- Добави още -->
-      </tbody>
-    </table>
+   <!--Да напиша статистиките от notes за сегашния сезон-->
   </main>
 
   <footer>
