updated the theme button, updated the UI

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
+    <button id="darkModeToggle">Тъмна тема</button>
     <h1>⚽ Добре дошли в моят сайт!</h1>
     <nav>
       <ul>
