--- a/stats.html
+++ b/stats.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
+    <button id="darkModeToggle">Тъмна тема</button>
     <h1>Футболна статистика</h1>
     <nav>
       <ul>
@@ -27,7 +27,7 @@
   </main>
 
   <footer>
-    <p>© 2025 My Football Journey</p>
+    <p>© 2025 My Football Journey | Създаден от Kristiyan Dzhurenov</p>
   </footer>
 </body>
 </html>
