--- a/training.html
+++ b/training.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
+    <button id="darkModeToggle">Тъмна тема</button>
     <h1>Моите тренировки</h1>
     <nav>
       <ul>
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>© 2025 My Football Journey</p>
+    <p>© 2025 My Football Journey | Създаден от Kristiyan Dzhurenov</p>
   </footer>
 </body>
 </html>
