--- a/goals.html
+++ b/goals.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <button id="theme-toggle">Смени тема 🌙 / ☀️</button>
+    <button id="darkModeToggle">Тъмна тема</button>
     <h1>Моите цели</h1>
     <nav>
       <ul>
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <p>© 2025 My Football Journey</p>
+    <p>© 2025 My Football Journey | Създаден от Kristiyan Dzhurenov</p>
   </footer>
 </body>
 </html>
