The button theme is everywhere

--- a/training.html
+++ b/training.html
@@ -8,8 +8,12 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="theme-toggle-container">
+    <button id="themeToggle" class="theme-toggle-button">
+        <span id="themeIcon">☀️</span> <span id="themeText"></span>
+    </button>
+</div>
   <header>
-    <button id="darkModeToggle">Тъмна тема</button>
     <h1>Моите тренировки</h1>
     <nav>
       <ul>
