--- a/stats.html
+++ b/stats.html
@@ -28,9 +28,10 @@
   <main>
     <h2>Статистика за сезона</h2>
    <!--Да напиша статистиките от notes за сегашния сезон-->
+   <p>В момента няма налични данни за настоящият сезон.</p>
   </main>
 
-  <footer>
+  <footer >
     <p>© 2025 My Football Journey | Създаден от Kristiyan Dzhurenov</p>
   </footer>
 </body>
