--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <section>
       <h2>За мен</h2>
-      <p>Казвам се Кристиян, на 15 години съм и играя като централен халф в.</p>
+      <p>Казвам се Кристиян, на 15 години съм и играя като централен халф.</p>
       <p>Освен футбола, се уча да стана програмист и този сайт е част от моето развитие!</p>
     </section>
 
